--- a/frontend/style.css
+++ b/frontend/style.css
@@ -1,16 +1,67 @@
+:root{
+    --dark: #000000;
+    --gray: #464646;
+    --green: #B9FF66;
+}
+
+
 *{
     margin: 0;
     padding: 0;
 }
-#Logo{
-    text-align: center;
+body{
+    font-family: "Space Grotesk",sans-serif;
+}
+.hat{
+    padding-block: 40px;
+}
+.header__container{
+    max-width: 1440px;
+    margin-inline: auto;
 }
 
-nav a{
-    text-decoration:none;
-
+.header__nav{
+    display:flex;
+    justify-content: space-between;
+    align-items: center;
 }
-nav a:visited{
-    text-decoration:none;
-    color: inherit;
+
+.header__list{
+    display: flex;
+
+    gap: 40px;
+    
+}
+ul{
+    list-style: none;
+}
+.header__list-link{
+       font-weight: 600;
+       font-size: 20px;
+       color: var(--gray);
+       transition: color 0.5s;
+}
+
+.header__list-link:hover{
+    color: var(--dark);
+    border-bottom: 3px solid var(--green);
+    font-weight: 700;
+}
+a{
+    text-decoration: none;
+}
+
+.header__button{
+    padding: 20px 35px;
+    border: 2px solid var(--dark);
+    border-radius: 14px;
+    color: var(--dark);
+    transition: 0.3s;
+}
+.header__button:hover{
+    opacity: 60%;
+}
+
+.header__button:active{
+    background-color: #464646;
 }
