--- a/frontend/style.css
+++ b/frontend/style.css
@@ -8,6 +8,7 @@
 *{
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
 }
 body{
     font-family: "Space Grotesk",sans-serif;
@@ -18,6 +19,7 @@ body{
 .header__container, .hero__container{
     max-width: 1440px;
     margin-inline: auto;
+    
 }
 
 .header__nav{
@@ -28,7 +30,6 @@ body{
 
 .header__list{
     display: flex;
-
     gap: 40px;
     
 }
@@ -63,16 +64,23 @@ a{
 .header__button:active{
     background-color: var(--green);
     color: var(--dark);
+    border: 2px solid var(--green);
 }
 
 .header__button:hover{
     opacity: 60%;
+    
 }
 
 
+.hero{
+    padding-block: 30px 65px;   
+}
+.hero__container{
+    position: relative;
+}
 
-
-.hero__projects-list{
+.hero__button-projects{
     padding: 20px 35px;
     border: 2px solid var(--dark);
     border-radius: 14px;
@@ -80,16 +88,32 @@ a{
     transition: 0.3s;
     color:white
 }
+.hero__button{
+    margin-top: 65px;
+    text-align: left;
+}
+.hero__button:hover{
+    opacity: 75%;
+}
 
-.hero{
-    padding-block: 30px 65px;
-}
-.hero{
-    position: relative;
-}
+
 
 .hero__image{
     position: absolute;
     top: 0;
     right: 0;
+}
+
+.hero__title{
+    max-width: 380px;
+    font-size:60px;
+    font-weight: 700;
+    line-height: 77px;
+}
+
+.hero__descriprion{
+    max-width: 500px;
+    font-size: 22px;
+    line-height: 28px;
+    margin-top: 35px;
 }
