--- a/frontend/style.css
+++ b/frontend/style.css
@@ -4,19 +4,20 @@
     --green: #B9FF66;
 }
 
-
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
+
+
 body{
     font-family: "Space Grotesk",sans-serif;
 }
 .hat{
     padding-block: 40px;
 }
-.header__container, .hero__container{
+.header__container, .hero__container, .services__content{
     max-width: 1440px;
     margin-inline: auto;
     
@@ -73,6 +74,7 @@ a{
 }
 
 
+
 .hero{
     padding-block: 30px 65px;   
 }
@@ -96,8 +98,6 @@ a{
     opacity: 75%;
 }
 
-
-
 .hero__image{
     position: absolute;
     top: 0;
@@ -116,4 +116,21 @@ a{
     font-size: 22px;
     line-height: 28px;
     margin-top: 35px;
+}
+
+
+
+.services__content{
+    padding-block: 65px 188px;
+    display:flex;
+    
+}
+
+.services__logo{
+    margin-right: 40px;
+    font-size: 40px;
+    font-weight: 500;
+    border: 4px solid var(--green);
+    background-color: var(--green);
+     border-radius: 7px;
 }
