--- a/frontend/style.css
+++ b/frontend/style.css
@@ -17,7 +17,7 @@ body{
 .hat{
     padding-block: 40px;
 }
-.header__container, .hero__container, .services__content{
+.header__container, .hero__container, .services__content, .advantages__content{
     max-width: 1440px;
     margin-inline: auto;
     
@@ -133,4 +133,16 @@ a{
     border: 4px solid var(--green);
     background-color: var(--green);
      border-radius: 7px;
+}
+
+
+
+
+.advantages__list{
+    display: flex;          
+    flex-wrap: wrap;       
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 187px;
+    gap: 40px 30px; 
 }
