--- a/frontend/style.css
+++ b/frontend/style.css
@@ -17,7 +17,7 @@ body{
 .hat{
     padding-block: 40px;
 }
-.header__container, .hero__container, .services__content, .advantages__content, .create__content, .examples__content, .feedvack__content{
+.header__container, .hero__container, .services__content, .advantages__content, .create__content, .examples__content, .feedvack__content, .steps__content{
     max-width: 1440px;
     margin-inline: auto;
     
@@ -202,4 +202,38 @@ a{
     margin-bottom: 80px;
     display:flex;
 }
+
+
+
+/* nums */
+
+.steps-default{
+    display: flex;           /* Включаем flexbox */
+    align-items: center;     /* Выравниваем по вертикали по центру */
+    gap: 20px;              /* Расстояние между элементами */  
+    padding: 41px 60px;
+    position: relative;
+    width: 1234px;
+    height: 159px;
+    background: #F3F3F3;
+    border: 1px solid #191A23;
+    box-shadow: 0px 5px 0px #191A23;
+    border-radius: 45px;
+    text-align: center;
+    margin: 0 auto;
+    cursor: pointer;
+    margin-bottom:30px;
+}
+
+.steps-default:active{
+    
+}
+.steps__num{
+    font-size: 60px;
+    margin-right: 18.5px;
+}
+.steps__title-text{
+    font-size: 30px;
+}
+
 
