Сделал секцию с командой и добавил ссылки на наши гитхабы

--- a/frontend/style.css
+++ b/frontend/style.css
@@ -17,7 +17,7 @@ body{
 .hat{
     padding-block: 40px;
 }
-.header__container, .hero__container, .services__content, .advantages__content, .create__content, .examples__content, .feedvack__content, .steps__content, .team__content, .means__content, .connect__content{
+.header__container, .hero__container, .services__content, .advantages__content, .create__content, .examples__content, .feedvack__content, .steps__content, .team__content, .means__content, .connect__content, .teammates__content{
     max-width: 1440px;
     margin-inline: auto;
     
@@ -373,7 +373,7 @@ a{
 }
 .team__content{
     margin-top:10px ;
-    margin-bottom: 80px;
+    margin-bottom: 70px;
     display:flex;
 }
 
@@ -394,7 +394,7 @@ a{
      white-space: nowrap;  
 }
 .means__content{
-    margin-top:10px ;
+    margin-top:130px ;
     margin-bottom: 80px;
     display:flex;
 }
@@ -419,3 +419,19 @@ a{
     margin-bottom: 80px;
     display:flex;
 }
+
+
+
+.teammates__list ul {
+    display: flex;
+    justify-content: center;
+    gap: 40px;
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+
+
+
+
+
